--- a/kenshin-system/src/main/resources/application.properties
+++ b/kenshin-system/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc\:postgresql\://localhost\:5432/kenshin
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
